--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/paint.css">
-  <script type="text/javascript" src="main.js"></script>
-  <title>Document</title>
+  <title>A Paint Program</title>
 </head>
 <body>
-  <script>createPaint(document.body);</script>
+  <script type="text/javascript" src="js/build.js"></script>
+</body>
 </body>
 </html>
